# Simplii21

./: .coverage  .gitignore  .travis.yml  API_DOCUMENTATION.md  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  Function Description.md  LICENSE  README.md  SE project.py  TestModule.py  app.py  conn_test.py  docs.py  enhancements.md  governanceModel.md  index.html  lint.sh  project2rubric.md  pyproject.toml  quotes.js  requirements.txt  requirements_1.txt  styles.css  test.py
.github/workflows/: code_cov.yml  code_formatter.yml  python-app.yml  syntax_checker.yml  unit_test.yml
code/code/: app.py
docs/: enhancements.md  proj1rubric.md  proj1rubricComments  proj2rubric.md  project3rubric.md  screen-recording-2021-11-04-at-114141-pm_N0rldim3.mov
models/: README.md  recommend.py  stats.py  task_recommendation.csv  task_recommendation.txt
src/: .coverage  .envtemplate  app.py  application.py  apps.py  forms.py  try.py
src/Simplii_App/: application.py  application.spec  apps.py  forms.py  try.py
src/apps/: apps.py
src/forms/: forms.py
src/static/: main.css  quotes.csv  user_information.json
src/templates/: about.html  analytics.html  base.html  dashboard.html  forum.html  friends.html  index.html  layout.html  login.html  resetPass.html  task.html  (+3 more)
static/: quotes.csv  quotes_dataset.csv  scripts.js  styles.css  user_information.json
templates/: index.html
test/: integration_test.py  test_app.py  test_application.py  test_invalid_login.py  test_login.py  test_login_validation.py  test_signup.py  test_signup_validation.py  unit_test.py
(+26 files in other folders)
